# Annotator

./: .gitignore  README.md
Annotator/: AnnotatorMainWindow.cpp  AnnotatorMainWindow.h  CMakeLists.txt  Resources.qrc  main.cpp
Annotator/AnnotatorApplication/: AnnotatorController.cpp  AnnotatorController.h
Annotator/AnnotatorUI/: AnnotatorMainWindow.cpp  AnnotatorMainWindow.h  Dockwidget.cpp  Dockwidget.h  Toolbar.cpp  Toolbar.h
Annotator/AnnotatorView/: AnnotatorViewer.cpp  AnnotatorViewer.h  MiniMap.cpp  MiniMap.h
Annotator/Data Structures/: GraphicsItem.cpp  GraphicsItem.h  ItemCache.cpp  ItemCache.h  Tile.cpp  Tile.h  TileCache.cpp  TileCache.h  TileJob.cpp  TileJob.h  Tiler.cpp  Tiler.h
Annotator/Reader/: ImageFactory.cpp  ImageFactory.h  ImageReader.cpp  ImageReader.h  OpenCVImageReader.cpp  OpenCVImageReader.h  WholeSlideImageReader.cpp  WholeSlideImageReader.h
Annotator/Threads/: Manager.cpp  Manager.h  Worker.cpp  Worker.h
